--- a/public/emulator/index.html
+++ b/public/emulator/index.html
@@ -10,11 +10,25 @@ margin:0;
 background:black;
 height:100%;
 overflow:hidden;
+font-family: sans-serif;
 }
 
 #game{
 width:100%;
 height:100%;
+}
+
+#loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #10b981;
+  font-weight: 900;
+  font-style: italic;
+  letter-spacing: -0.05em;
+  font-size: 24px;
+  text-transform: uppercase;
 }
 </style>
 
@@ -22,31 +36,35 @@ height:100%;
 
 <body>
 
+<div id="loading">Initializing System...</div>
 <div id="game"></div>
 
 <script>
 
-function getGame(){
- const params =
- new URLSearchParams(window.location.search);
- return params.get("game");
+function getParam(name){
+ const params = new URLSearchParams(window.location.search);
+ return params.get(name);
 }
 
-const game = getGame();
+const game = getParam("game");
 
-EJS_player="#game";
-EJS_core="arcade";
+// EmulatorJS Configuration
+window.EJS_player = "#game";
+window.EJS_core = "fbneo"; // Using FBNeo as requested
+window.EJS_gameName = game;
+window.EJS_color = "#10b981";
 
-EJS_pathtodata=
-"https://cdn.emulatorjs.org/stable/data/";
+window.EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
 
-EJS_gameUrl=
-"/roms/neogeo/"+game+".zip";
+window.EJS_gameUrl = "/roms/neogeo/" + game + ".zip";
+window.EJS_biosUrl = "/bios/neogeo.zip";
 
-EJS_biosUrl=
-"/bios/neogeo.zip";
+window.EJS_startOnLoaded = true;
 
-EJS_startOnLoaded=true;
+// Hide loading text when emulator starts
+window.EJS_onGameStart = function() {
+  document.getElementById('loading').style.display = 'none';
+};
 
 </script>
 
