--- a/public/emulator/index.html
+++ b/public/emulator/index.html
@@ -46,17 +46,17 @@ function getParam(name){
  return params.get(name);
 }
 
-const game = getParam("game");
+const rom = getParam("rom");
 
 // EmulatorJS Configuration
 window.EJS_player = "#game";
 window.EJS_core = "fbneo"; // Using FBNeo as requested
-window.EJS_gameName = game;
+window.EJS_gameName = rom ? rom.replace('.zip', '') : "Unknown";
 window.EJS_color = "#10b981";
 
 window.EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
 
-window.EJS_gameUrl = "/roms/neogeo/" + game + ".zip";
+window.EJS_gameUrl = "/roms/" + rom;
 window.EJS_biosUrl = "/bios/neogeo.zip";
 
 window.EJS_startOnLoaded = true;
