fix: Improve game loading and BIOS handling
Update the emulator's BIOS path to point to `/roms/neogeo.zip`, which is a common user convention. Add a check in the `play` page to verify the existence of the BIOS file and display an informative error message if it's missing.

Modify the `GameCard` component to support custom game images, falling back to generated images if a custom one isn't provided. Update the `games` API route to include a mapping for more game titles, enhancing the display of game names.

--- a/public/emulator/index.html
+++ b/public/emulator/index.html
@@ -62,7 +62,7 @@ window.EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
 
 // Load ROM exactly as uploaded
 window.EJS_gameUrl = "/roms/" + rom;
-window.EJS_biosUrl = "/bios/neogeo.zip";
+window.EJS_biosUrl = "/roms/neogeo.zip"; // Point to /roms/neogeo.zip as it's common for users to put it there
 
 // Hide loading text when emulator starts
 window.EJS_onGameStart = function() {
