feat: Improve socket connection and room handling
This commit introduces several enhancements to the socket connection logic and room management system.

Key changes include:
- **Robust BIOS path checking:** The emulator now attempts to load the Neo Geo BIOS from both `/roms/neogeo.zip` and `/bios/neogeo.zip` for better compatibility.
- **Socket status updates:** Added logic to track and display the socket connection status ('connected', 'disconnected', 'connecting') on relevant pages.
- **Graceful socket connection:** The client now intelligently connects to the socket server, ensuring a connection before emitting events like 'create-room'.
- **Enhanced room creation:** The `create-room` event now returns the `roomId` and the initial player list, providing more immediate room information to the client.
- **New `get-room-info` event:** Implemented a new server-side event to fetch current room details (players, game) for a given `roomId`.
- **Socket.IO configuration:** Added improved configuration options for `pingTimeout`, `pingInterval`, `connectTimeout`, and `allowEIO3` for more stable connections.
- **Socket reconnection logic:** Implemented reconnection attempts and delays for better resilience.
- **Room full/not found handling:** Improved error handling for `join-room` and `get-room-info` events to correctly inform the client when a room is full or does not exist.

--- a/public/emulator/index.html
+++ b/public/emulator/index.html
@@ -62,16 +62,37 @@ window.EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
 
 // Load ROM exactly as uploaded
 window.EJS_gameUrl = "/roms/" + rom;
-window.EJS_biosUrl = "/roms/neogeo.zip"; // Point to /roms/neogeo.zip as it's common for users to put it there
+
+// BIOS Configuration
+// We try to load from /roms/ first, then /bios/ as a fallback.
+// For Neo Geo, neogeo.zip is mandatory.
+window.EJS_biosUrl = "/roms/neogeo.zip"; 
 
 // Hide loading text when emulator starts
 window.EJS_onGameStart = function() {
   document.getElementById('loading').style.display = 'none';
 };
 
-</script>
+// Check if /roms/neogeo.zip exists, if not use /bios/neogeo.zip
+fetch('/roms/neogeo.zip', { method: 'HEAD' })
+  .then(res => {
+    if (!res.ok) {
+      window.EJS_biosUrl = "/bios/neogeo.zip";
+    }
+    loadEmulator();
+  })
+  .catch(() => {
+    window.EJS_biosUrl = "/bios/neogeo.zip";
+    loadEmulator();
+  });
 
-<script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
+function loadEmulator() {
+  const script = document.createElement('script');
+  script.src = "https://cdn.emulatorjs.org/stable/data/loader.js";
+  document.body.appendChild(script);
+}
+
+</script>
 
 </body>
 </html>
